# mens-esthe-map_test

./: .env.example  .gitignore  CLAUDE.md  CNAME  docker-compose.yml
.claude/commands/: pr.md
.claude/skills/create-pr/: SKILL.md
.claude/skills/github-pr-review-operation/: SKILL.md
.github/workflows/: ci.yml
backend/: pyproject.toml  railway.toml  requirements.txt
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 001_initial_schema.py  002_add_text_ja_column.py
backend/app/: config.py  main.py
backend/app/ai/: __init__.py  analyzer.py  embeddings.py  llm_client.py  prompts.py  rag_search.py  scoring.py  translator.py
backend/app/api/v1/: analytics.py  ingestion.py  reviews.py  router.py  search.py  shops.py
backend/app/db/: __init__.py  session.py
backend/app/models/: __init__.py  analytics.py  review.py  shop.py
backend/app/schemas/: __init__.py  analytics.py  review.py  shop.py
backend/app/services/: __init__.py  apify_client.py  ingestion.py  places_api.py  review_service.py  shop_service.py
backend/app/tasks/: __init__.py  analysis_task.py  scheduler.py
backend/app/utils/: __init__.py  geo.py
backend/db/: Dockerfile
backend/db/init/: 01_extensions.sql
database/: Dockerfile
frontend/: .env.local.example  Dockerfile  Dockerfile.dev  next.config.js  package-lock.json  package.json  railway.toml  tailwind.config.js  tsconfig.tsbuildinfo
frontend/scripts/: build.sh
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ClientPage.tsx
frontend/src/hooks/: index.ts  useAISearch.ts  (+4 more)
(+47 files in other folders)
